--- a/index.css
+++ b/index.css
@@ -1,1 +1,69 @@
 /* Put your style information here! */
+
+
+body {
+    font-family: 'Roboto Slab', serif;
+    padding-top: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+h1 {
+    margin: 15px;
+    margin-bottom: 0px;
+    font-size: 28px;
+    padding-top: 8px;
+    padding-bottom: 5px;
+    font-family: 'Poppins', sans-serif;
+ }
+
+ h2 {
+     margin: 15px;
+     margin-bottom: 0px;
+     font-size: 18px;
+     padding-top: 10px;
+     padding-bottom: 10px;
+     font-family: 'Poppins', sans-serif;
+ }
+
+img {
+    max-width: 100%;
+    max-height:100%;
+}
+
+li {
+    padding: 5px;
+    padding-right: 10px;
+}
+
+p {
+    padding: 10px;
+}
+
+img.icon {
+  max-height: 300px;
+  max-width: 100px;
+}
+
+img.sketch {
+    max-width: 800px;
+}
+
+img.story {
+    max-width: 1200px;
+    max-height: 5000px;
+}
+
+img.persona {
+    padding: 10px;
+    max-width: 500px:
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  padding: 10px;
+  flex: 50%;
+}
