--- a/index.css
+++ b/index.css
@@ -1,30 +1,29 @@
-/* Put your style information here! */
-
-
 body {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Raleway', sans-serif;
     padding-top: 2%;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 h1 {
-    margin: 15px;
-    margin-bottom: 0px;
     font-size: 28px;
-    padding-top: 8px;
-    padding-bottom: 5px;
+    padding: 8px;
     font-family: 'Poppins', sans-serif;
  }
 
  h2 {
-     margin: 15px;
-     margin-bottom: 0px;
      font-size: 18px;
-     padding-top: 10px;
-     padding-bottom: 10px;
+     padding: 5px;
      font-family: 'Poppins', sans-serif;
  }
+
+ h3 {
+     margin: 1px;
+     color: blue;
+     font-size: 38px;
+     padding-top: 3px;
+     font-family: 'Poppins', sans-serif;
+  }
 
 img {
     max-width: 100%;
@@ -37,7 +36,7 @@ li {
 }
 
 p {
-    padding: 10px;
+    padding: 8px;
 }
 
 img.icon {
